# SimulationWork

my_package/: ._CMakeLists.txt  CMakeLists.txt  package.xml
my_package/description/: backup.xacro  backup2.xacro  backupexample_gazebo.xacro  dock.urdf.xacro  example2_gazebo.xacro  example_gazebo.xacro  ship.xacro  test.urdf.xacro  test2.sdf  test2.urdf.xacro
my_package/install/: local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_package/launch/: backupgazebo.launch.py  boat_simulation.launch.py  test.launch.py  testgazebo.launch.py
my_package/log/: latest_build
my_package/meshes/: ._DOCK.dae  ._blender  ._terminal.dae  DOCK2.dae  DOCK3.dae
my_package/meshes/blender/: ._DOCK.blend  ._DOCK.dae  ._DOCK_TRIANGLE.blend  ._WATER_SURFACE.blend
my_package/models/dock/6/: model.config  model.sdf
my_package/models/dock/6/meshes/: dock.dae
my_package/models/robot2/: ._model.config  model.config  model.sdf
my_package/models/robot2/meshes/: ._Boat05.dae  Boat05.dae
my_package/plugins/: LaserPlugin.cpp  WavePlugin.cpp  lastworking.cpp
my_package/src/: backup_imagelistener.py  image_listener.py
my_package/worlds/: ._Media  ._models  ._ocean2.world  ._worlds  lastworking.world  ocean.world  ocean2.world  ship1.world
my_package/worlds/Media/: ._materials  ._models
my_package/worlds/Media/materials/: ._programs  ._scripts  ._textures
my_package/worlds/Media/materials/programs/: ._SimpleWaves.frag  ._SimpleWaves.vert
my_package/worlds/Media/materials/scripts/: ._fiducials.material  ._sand.material  ._water.material  ._waves.material
my_package/worlds/Media/materials/textures/: ._License and source for textures.txt  ._fiducials  ._wave_normals.dds
my_package/worlds/Media/models/: ._sea_surface_1000m_x_1000m.dae
my_package/worlds/install/: local_setup.bash  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_package/worlds/models/: ._april_tag_36_11_00000  ._aurora_static  ._bop_panel  ._herkules_seabed  ._herkules_ship_wreck  ._hot_stab  ._lake  ._mangalia  ._munkholmen  ._munkholmen_seabed  ._ned_frame  ._ocean  ._ocean_box  ._rov_bop_panel  ._sand_heightmap  ._sea_bottom  ._sea_surface  ._t_bar_fork_tool  ._torque_tool  ._tree  ._umbilical
my_package/worlds/models/april_tag_36_11_00000/: ._model.config
my_package/worlds/models/aurora_static/: ._model.config  ._model.sdf
my_package/worlds/models/aurora_static/meshes/: ._aurora.dae
my_package/worlds/models/bop_panel/: ._model.config  ._model.sdf
my_package/worlds/models/bop_panel/meshes/: ._Valve.dae  ._VentilBlock.mtl
my_package/worlds/models/herkules_seabed/: ._meshes  ._model.sdf
my_package/worlds/models/herkules_ship_wreck/: ._model.config  ._model.sdf
my_package/worlds/models/herkules_ship_wreck/meshes/: ._herkules.dae
my_package/worlds/models/hot_stab/: ._meshes  ._model.sdf
my_package/worlds/models/mangalia/: ._meshes
my_package/worlds/models/munkholmen/: ._model.config  ._model.sdf
my_package/worlds/models/munkholmen/meshes/: ._munkholmen.dae
my_package/worlds/models/munkholmen_seabed/: ._model.config
my_package/worlds/models/ned_frame/: ._model.sdf
my_package/worlds/models/ocean/: ._model.config  ._model.sdf  model.sdf
my_package/worlds/models/rov_bop_panel/: ._meshes  ._model.config  ._model.sdf
my_package/worlds/models/rov_bop_panel/meshes/: ._SmallValve.dae
my_package/worlds/models/sand_heightmap/: ._meshes  ._model.config  ._model.sdf  model.sdf
my_package/worlds/models/sea_bottom/: ._model.config  ._model.sdf
my_package/worlds/models/t_bar_fork_tool/: ._meshes  ._model.config  ._model.sdf
my_package/worlds/models/torque_tool/: ._model.config  ._model.sdf
my_package/worlds/models/torque_tool/meshes/: ._TorqueTool.dae
my_package/worlds/models/tree/: ._meshes  ._model.config
my_package/worlds/models/umbilical/: ._model.config  ._model.sdf
my_package/worlds/worlds/: ._auv_underwater_world.world  ._empty_underwater.world  ._herkules_ship_wreck.world  ._lake.world  ._mangalia.world  ._mangalia_manipulation.world  ._munkholmen.world  ._ocean_waves.world  ._subsea_bop_panel.world  ._underwater_heightmap.world  ocean_waves.world
ros2_interfaces/: CMakeLists.txt  (+1 more)
simulation/: CMakeLists.txt  package.xml
simulation/IRGCameraSimPlugins/: CMakeLists.txt
simulation/description/: camera_gazebo.xacro  dock.urdf.xacro
simulation/launch/: boat_simulation.launch.py
simulation/meshes/: DOCK4.dae
simulation/models/marina/: model.sdf
simulation/msg/: Point.msg
simulation/plugins/: CMakeLists.txt
simulation/worlds/: ocean.world
simulation/worlds/models/april_tag_36_11_00000/: ._model.sdf
simulation/worlds/models/aurora_static/: ._meshes
simulation/worlds/models/aurora_static/meshes/: ._aurora_collision.stl
simulation/worlds/models/bop_panel/: ._meshes
simulation/worlds/models/bop_panel/meshes/: ._VentilBlock.stl
simulation/worlds/models/herkules_seabed/: ._model.config
simulation/worlds/models/herkules_seabed/meshes/: ._herkules_seabed.dae
simulation/worlds/models/herkules_ship_wreck/: ._meshes
simulation/worlds/models/hot_stab/: ._model.config
simulation/worlds/models/hot_stab/meshes/: ._HotStab.dae
simulation/worlds/models/lake/: ._meshes  ._model.config  ._model.sdf
simulation/worlds/models/lake/meshes/: ._LakeBottom.dae  ._WaterSurface.dae
simulation/worlds/models/mangalia/: ._model.config  ._model.sdf
simulation/worlds/models/mangalia/meshes/: ._170427_Seabed8_textured.blend  ._170427_Seabed8_textured.dae  ._License and source for textures.txt  ._MangaliaTerrain.dae
simulation/worlds/models/munkholmen/: ._meshes
simulation/worlds/models/munkholmen_seabed/: ._meshes  ._model.sdf
simulation/worlds/models/ned_frame/: ._model.config
simulation/worlds/models/ocean/: model.sdf
simulation/worlds/models/ocean_box/: ._model.config  ._model.sdf
simulation/worlds/models/sand_heightmap/: model.sdf
simulation/worlds/models/sea_surface/: ._model.config  ._model.sdf
simulation/worlds/models/torque_tool/: ._meshes
simulation/worlds/models/tree/: ._model.sdf
(+17 files in other folders)
